Fix for menu where large version names would break the drop down menu (ticket #297)

--- a/web/resources/less/main.less
+++ b/web/resources/less/main.less
@@ -180,8 +180,10 @@ input[type="submit"]:hover, .extlikebutton:hover {
                             border-top: 0px none;
                             z-index: 99999;
                             li {
+                                width: 100%;
+                                min-width: 300px;
                                 a {
-                                    width: 300px;
+                                    width: 100%;
                                     float: right;
                                     text-align: right;
                                     border-top: 1px solid @menutextcolor;
